# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2023 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/html:defs.bzl", "rt_html_test")
load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")
load("//htmlbook/tools/python:defs.bzl", "rt_py_test")
load("//htmlbook/tools/tidy:def.bzl", "html_tidy_test")

exports_files(
    ["LICENSE.TXT"],
    visibility = ["//visibility:public"],
)

exports_files(
    ["setup.cfg"],
    visibility = ["//:__subpackages__"],
)

filegroup(
    name = "html",
    srcs = glob([
        "*.html",
        "*.html.in",
    ]),
    visibility = ["//:__subpackages__"],
)

html_tidy_test(
    name = "html_tidy",
    srcs = [":html"],
    config = ".tidy.config",
)

rt_html_test(
    srcs = ["intro.html"],
)

rt_ipynb_test(
    name = "intro",
    srcs = ["intro.ipynb"],
    deps = [
      "//manipulation",
      "//manipulation:meshcat_utils",
      "//manipulation:scenarios",
    ],
)

rt_html_test(
    srcs = ["robot.html"],
)

rt_html_test(
    srcs = ["pick.html"],
)

rt_html_test(
    srcs = ["pose.html"],
)

rt_html_test(
    srcs = ["clutter.html"],
)

rt_html_test(
    srcs = ["segmentation.html"],
)

rt_html_test(
    srcs = ["deep_perception.html"],
)

# torchvision is trying to write to a temp directory.
#rt_ipynb_test(
#    name = "segmentation_inference",
#    srcs = ["segmentation_inference.ipynb"],
#    deps = ["//manipulation"],
#    data = ["//data:clutter_maskrcnn_data"],
#)

rt_py_test(
  name = "segmentation_data",
    srcs = ["segmentation_data.py"],
    data = ["//manipulation/models"],
    args = ["--test"],
    imports = [".."],
    deps = [
      "//manipulation",
      "//manipulation:scenarios",
    ],
)

rt_html_test(
    srcs = ["force.html"],
)

rt_html_test(
    srcs = ["trajectories.html"],
)

rt_html_test(
    srcs = ["rl.html"],
)

rt_html_test(
    srcs = ["drake.html"],
)

rt_html_test(
    srcs = ["misc.html"],
)

rt_html_test(
    srcs = ["station.html"],
)

filegroup(
    name = "chapters",
    srcs = ["chapters.json"],
    visibility = ["//visibility:public"],
)

# Some methods look for this file to find the root directory.
filegroup(
    name = "workspace",
    srcs = ["WORKSPACE.bazel"],
    visibility = ["//visibility:public"],
)
