# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2024 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//book/htmlbook/tools/html:defs.bzl", "rt_html_test")
load("//book/htmlbook/tools/tidy:def.bzl", "html_tidy_test")

exports_files(
    [
      "LICENSE.TXT",
      "pyproject.toml",
      "solutions_sha.txt",
    ],
    visibility = ["//visibility:public"],
)

# Some methods look for this file to find the root directory.
filegroup(
    name = "workspace",
    srcs = ["MODULE.bazel"],
    visibility = ["//visibility:public"],
)
