# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2024 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

workspace(name = "manipulation")

load(
    "//book/htmlbook/tools:repositories.bzl",
    "rt_dependencies",
    "rt_toolchains",
)

rt_dependencies()


load("@rules_python//python:repositories.bzl", "py_repositories")

py_repositories()

load(
    "@rules_python//python/private:internal_config_repo.bzl",
    "internal_config_repo",
)
internal_config_repo(
    name = "rules_python_internal",
)

rt_toolchains()

load("@bazel_skylib//lib:versions.bzl", "versions")

versions.check("2.0.0")

load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "pip_deps",
    requirements_darwin = "//:requirements-bazel-mac.txt",
    requirements_linux = "//:requirements-bazel-linux.txt",
    requirements_lock = "//:requirements-bazel.txt",
    experimental_requirement_cycles = {
      "lxml": [
        "lxml",
        "lxml-html-clean",
      ],
    },
)

load("@pip_deps//:requirements.bzl", "install_deps")

install_deps()

load("//book/htmlbook/tools/buildifier:repositories.bzl", "buildifier_dependencies")

buildifier_dependencies()

load("//book/htmlbook/tools/tidy:repositories.bzl", "tidy_dependencies")

tidy_dependencies()

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "drake_models",
    urls = [
        "https://github.com/RobotLocomotion/models/archive/2799af70868d0cb4b25e046209fbd5d578b3e1b1.tar.gz",
        "https://drake-mirror.csail.mit.edu/github/RobotLocomotion/models/2799af70868d0cb4b25e046209fbd5d578b3e1b1.tar.gz",
        "https://s3.amazonaws.com/drake-mirror/github/RobotLocomotion/models/2799af70868d0cb4b25e046209fbd5d578b3e1b1.tar.gz",
    ],
    sha256 = "fd2dc12d0701f41199eb4ea6bf3e09b5a5041d92f5103e8322013f63a3c380b8",
    strip_prefix = "models-2799af70868d0cb4b25e046209fbd5d578b3e1b1",
    build_file_content = """
package(default_visibility = ["//visibility:public"])

_SRCS = glob(["**/*"])

exports_files(_SRCS)

filegroup(
    name = "drake_models",
    srcs = _SRCS,
)

""",
)
