[tool.poetry]
name = "manipulation"
# Use e.g. 2024.10.4.rc0 if I need to release a release candidate.
# Use e.g. 2024.10.4.post1 if I need to rerelease on the same day.
version = "2025.9.10"
description = "MIT 6.421 - Robotic Manipulation"
authors = ["Russ Tedrake <russt@mit.edu>"]
license = "BSD License"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
include = [
    "LICENSE.txt",
    "README.md",
    "pyproject.toml",
    "manipulation/**/*.py",
    "manipulation/**/*.npy",
    "manipulation/**/*.sdf",
    "manipulation/**/*.urdf",
    "manipulation/**/*.xml",
    "manipulation/**/*.yaml",
    "manipulation/**/*.obj",
    "manipulation/**/*.stl",
    "manipulation/**/*.dae",
]
exclude = [
    "*.egg-info/**",
    "**/__pycache__/**",
    "**/*.bazel",
    "**/test/**",
    "bazel-*",
    "book/**",
    "solutions/**",
    "figures/**",
    "manipulation/_static/**",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "drake-nightly"
url = "https://drake-packages.csail.mit.edu/whl/nightly/"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"  # Support Python 3.10 (Jammy CI), Python 3.12 (Noble CI), and 3.13 (macOS)
cloudpickle = { version="2.2.1", optional=true} # needs to be pinned for stored files to remain compatible.
#drake = { version = ">=0.0.20250131 <0.1", source = "drake-nightly" }
drake = ">=1.41.0"
gradescope-utils = { version=">=0.4.0", optional=true}
gymnasium = { version=">0.26", optional=true }
ipython = ">=7.8.0" # TODO: make this optional?
ipywidgets = { version=">=8", optional=true } 
lxml = {version = ">=4.9.2", extras = ["html_clean"] }
# Note: matplotlib gets additional handling in PoetryExport.py for bazel. 
matplotlib = ">=3.7.0" # old versions don't build in XCode
mpld3  = { version=">=0.5.6", optional=false } # TODO: make this optional
nbconvert = [
  {platform="darwin", version="7.14.2", optional=true},
  {platform="linux", version="7.14.2", optional=true},
] # pegged to 7.14.2 because the latest version is 7.16.6 has conflicts with bleach
nbformat = { version=">=5.0.0", optional=true }
nevergrad = { version=">=0.4.3", optional=true } # TODO: avoid expensive bayesian optimization dep
numpy = "^2.0.0"
psutil = { version=">=5.9.*", optional=true }
pycollada = { version=">=0.8", optional=true }
#pymcubes = ">=0.0.9"
pyvirtualdisplay = { version=">=3.0", optional=false } # TODO: remove this.
pyzmq = [ 
  {platform="darwin", version=">=27.0.0", optional=true}, # needed for python 3.11?
  {platform="linux", version=">=24.0.0", optional=true}, # <25.0.0 is currently needed for deepnote; this is pinned in htmlbook/Init.ipynb 
]
scene-synthesizer = { version=">=1.13.2", optional=true }
scipy = { version=">=1.10.0", optional=true }
setuptools = { version="<71.0.0", optional=true } # https://github.com/pypa/setuptools/issues/4487
stable-baselines3 = { version=">=2.0.0", optional=true }
timeout-decorator = { version=">=0.4.1", optional=true }
# Note: formerly I had pinned torch to 2.3.x for deepnote compatiblity.
torch = { version=">=2.3,<3.0", optional=true } # torch 2.3+ works for Python 3.12, 2.4+ needed for Python 3.13
torchvision = { version=">=0.18.0,<1.0", optional=true } # broad range to support both platforms
tqdm = { version=">=4", optional=true }
trimesh = { version = ">=4.6.6", optional=true }
vhacdx = { version=">=0.0.5", optional=true }
#wandb = ">=0.14.0"
coacd = { version="^1.0.5", optional=true }
shapely = { version="^2.1.1", optional=true }
mapbox-earcut = { version="^1.0.3", optional=true }
manifold3d = { version="^3.2.1", optional=true }

[tool.poetry.extras]
torch = ["torch", "torchvision"]
rl = ["stable_baselines3", "gymnasium"]
mesh = ["pycollada", "trimesh", "vhacdx", "coacd"]
letter = ["shapely", "trimesh", "coacd", "mapbox-earcut", "manifold3d"]
grader = ["gradescope-utils", "timeout-decorator", "nbconvert", "nbformat"]
# 'all' should have all of the optional dependencies required to run any notebook in this repo.
all = [
  "cloudpickle",
  "gradescope-utils",
  "gymnasium",
  "ipywidgets",
  "nevergrad",
  "psutil",
  "pycollada",
  "pyzmq",
  "scene-synthesizer",
  "scipy",
  "stable_baselines3",
  "timeout-decorator",
  "torch",
  "torchvision",
  "tqdm",
  "trimesh",
  "vhacdx",
  "coacd",
  "shapely",
  "mapbox-earcut",
  "manifold3d"
]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
# Must include all dependencies required to build the docs with sphinx +
# autodoc, even if it repeats some dependencies from main, because my sphinx
# script uses `poetry install --only docs`. This include any requirements
# needed to import for a file that sphinx autodoc is trying to index. None of
# these should be marked as optional.
#drake = { version = ">=0.0.20250118 <0.1", source = "drake-nightly" }
drake = ">=1.41.0"
ipython = ">=7.8.0"
lxml = {version = ">=4.9.2", extras = ["html_clean"] }
mpld3  = { version=">=0.5.6", optional=false }
myst-parser = ">=2.0.0"
pyvirtualdisplay = { version=">=3.0", optional=false }
sphinx = ">=7.2.6"
sphinx_rtd_theme = ">=2.0.0"
trimesh = { version = ">=4.6.6", optional=false }
vhacdx = { version=">=0.0.5", optional=false }

[tool.poetry.group.dev.dependencies]
# These should not appear as requirements in any BUILD.bazel (except htmlbook)
beautifulsoup4 = { version=">=4.6.3" }
black = { version = ">=23.*", extras = ["jupyter"] }
mysql-connector-python = { version=">=8.0.23" }
packaging = ">=24.2"
pip-requirements-parser = ">=32.0"
pre-commit = "^3.4.0"
requests = { version=">=2.25.1" }

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
poetry-pre-commit-plugin = ">=0.2"

[tool.black]
include = '\.ipynb?$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.history
  | bazel-*
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip_glob = [
  "**/.git/**",
  "**/.history/**",
  "bazel-*",
  "**/.venv/**",
  "**/build/**",
  "**/dist/**",
]

[tool.autoflake]
in-place = true
recursive = true
expand-star-imports = true
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.pyright]
include = ["manipulation"]