# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2022 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "falling_things",
    srcs = ["falling_things.ipynb"],
    flaky = True,  # occasionally mbp will crash.
    data = ["//manipulation/models"],
    tags = ["no-sandbox"],  # from vtk-test-tags() in drake
    deps = [
        "//manipulation",
        "//manipulation:scenarios",
    ],
)

rt_ipynb_test(
    name = "contact_inspector",
    srcs = ["contact_inspector.ipynb"],
    data = ["//manipulation/models"],
    deps = [
        "//manipulation",
    ],
)

rt_ipynb_test(
    name = "contact_wrench",
    srcs = ["contact_wrench.ipynb"],
    deps = [
        "//manipulation",
        "//manipulation:scenarios",
    ],
)

rt_ipynb_test(
    name = "point_cloud_processing",
    srcs = ["point_cloud_processing.ipynb"],
    tags = ["no-sandbox"],  # from vtk-test-tags() in drake
    deps = [
        "//manipulation",
        "//manipulation:mustard_depth_camera_example",
    ],
)

rt_ipynb_test(
    name = "normal_estimation",
    srcs = ["normal_estimation.ipynb"],
    data = ["//manipulation/models"],
    tags = ["no-sandbox"],  # from vtk-test-tags() in drake
    deps = [
        "//manipulation",
        "//manipulation:mustard_depth_camera_example",
        "//manipulation:meshcat_utils",
    ],
)

rt_ipynb_test(
    name = "grasp_selection",
    srcs = ["grasp_selection.ipynb"],
    data = ["//manipulation/models"],
    tags = ["no-sandbox"],  # from vtk-test-tags() in drake
    deps = [
        "//manipulation",
        "//manipulation:mustard_depth_camera_example",
        "//manipulation:scenarios",
    ],
)

rt_ipynb_test(
    name = "clutter_clearing",
    srcs = ["clutter_clearing.ipynb"],
    data = ["//manipulation/models"],
    tags = ["no-sandbox"],  # from vtk-test-tags() in drake
    deps = [
      "//manipulation",
      "//manipulation:clutter",
      "//manipulation:meshcat_utils",
      "//manipulation:pick",
      "//manipulation:scenarios",
    ],
)