# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")
load("//htmlbook/tools/python:defs.bzl", "rt_py_test")

rt_ipynb_test(
    name = "grasp_frames",
    srcs = ["grasp_frames.ipynb"],
)

rt_py_test(
    name = "two_link_singularities",
    data = ["//manipulation/models:double_pendulum.urdf"],
    srcs = ["two_link_singularities.py"],
    deps = ["//manipulation:manipulation"]
)

rt_py_test(
    name = "scaling_spatial_velocity",
    srcs = ["scaling_spatial_velocity.py"],
)
